# curso_docker_github_actions

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
instructor/: guia_instructor.md  teoria.md
src/weather_api/: cache.py  client.py  main.py
src/weather_api_mini/: __init__.py
tests/: conftest.py  test_cache.py  test_client.py
