[project]
name = "weather-api-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FranxiscoDev", email = "franxiscodev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
